--- a/src/Cards.css
+++ b/src/Cards.css
@@ -57,10 +57,15 @@ box-shadow: 8px 12px 37px -11px rgba(0,0,0,0.75);
 
     border: 0;
     background-color: rgb(213, 59, 0);
+    color: white;
+    font-weight: bold;
 
     margin: 30px 0;
 
     border-radius: 30px;
 
     padding: 10px;
+}
+.card button:hover{
+    cursor: pointer;
 }
